<resources>
    <string name="app_name">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="submit">Submit</string>
    <string name="go_to_github_activity">Go To GitHub Activity</string>
</resources>
