<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormFragment">

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/etName"
        android:hint="@string/name"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/etAge"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/etCity"
        android:hint="@string/city"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnGoToGithubActivity"
        android:text="@string/go_to_github_activity"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/btnSubmit"
        android:text="@string/submit"
        android:layout_height="wrap_content" />

</LinearLayout>